--- a/Tic-Tac-Toe/First move_/task-info.yaml
+++ b/Tic-Tac-Toe/First move_/task-info.yaml
@@ -299,5 +299,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/48/stages/258/implement#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Fri, 12 Feb 2021 20:49:54 UTC
+record: 4
